...
                attributes: messageAttributes
            )
            
            alertController.setValue(attributedTitle, forKey: "attributedTitle")
            alertController.setValue(attributedMessage, forKey: "attributedMessage")
            
            // If no actions are provided, add a default "OK" action
            if let actions = actions, !actions.isEmpty {
                actions.forEach { alertController.addAction($0) }
            } else {
                let okAction = UIAlertAction(
                    title: "OK",
                    style: .default,
...
